--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.28.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
